--- a/api-runtime/rest-runtime/admin-web/html/body_frame.html
+++ b/api-runtime/rest-runtime/admin-web/html/body_frame.html
@@ -75,7 +75,7 @@
             <h3 style="display: flex; align-items: center; justify-content: space-between;">
                 1. Set Up Connections
                 <span style="font-size: 12px; font-weight: normal; color: #007bff;">
-                    💡 <a href="https://github.com/cloud-barista/cb-spider/tree/master/utils/default-connection-helper#readme" target="_blank" style="color: #007bff; text-decoration: none;">Default Connection Helper</a> for quick setup
+                    💡 <a href="https://github.com/cloud-barista/cb-spider/tree/master/utils/default-connection-helper#readme" target="_blank" style="color: #007bff; text-decoration: none;">CLI Auto-Registration Tool </a>
                 </span>
             </h3>
             <ol>
