enhance: improve AdminWeb overlay form UI with consistent grouping and styling

--- a/api-runtime/rest-runtime/admin-web/html/disk.html
+++ b/api-runtime/rest-runtime/admin-web/html/disk.html
@@ -611,7 +611,7 @@
                 <input type="hidden" id="connConfig" value="{{.ConnectionConfig}}">
                 <div class="form-group">
                     <label for="diskName">Name:</label>
-                    <input type="text" id="diskName" name="diskName" required>
+                    <input type="text" id="diskName" name="diskName" required style="color: #3366CC; font-weight: bold;">
                 </div>
                 <div class="form-group">
                     <label for="diskZone">Zone:</label>
