--- a/api-runtime/rest-runtime/admin-web/html/filesystem.html
+++ b/api-runtime/rest-runtime/admin-web/html/filesystem.html
@@ -259,7 +259,7 @@
             <form id="fs-create-form" onsubmit="event.preventDefault(); createFileSystem();">
                 <div style="margin-bottom: 10px;">
                     <label>Name:</label>
-                    <input type="text" id="new-fs-name" required style="width: 100%;">
+                    <input type="text" id="new-fs-name" required style="width: 100%; color: #3366CC; font-weight: bold;">
                 </div>
                 <div style="margin-bottom: 10px;">
                     <label>Zone:</label>
