--- a/api-runtime/rest-runtime/admin-web/html/keypair.html
+++ b/api-runtime/rest-runtime/admin-web/html/keypair.html
@@ -489,7 +489,7 @@
                 <input type="hidden" id="connConfig" value="{{.ConnectionConfig}}">
                 <div class="form-group">
                     <label for="keyPairName">Name:</label>
-                    <input type="text" id="keyPairName" name="keyPairName" required>
+                    <input type="text" id="keyPairName" name="keyPairName" required style="color: #3366CC; font-weight: bold;">
                 </div>
                 
                 <div class="form-group" style="padding-left: 100px;">
