--- a/api-runtime/rest-runtime/admin-web/html/myimage.html
+++ b/api-runtime/rest-runtime/admin-web/html/myimage.html
@@ -558,7 +558,7 @@
                 
                 <div class="form-group">
                     <label for="myImageName">Name:</label>
-                    <input type="text" id="myImageName" name="myImageName" required>
+                    <input type="text" id="myImageName" name="myImageName" required style="color: #3366CC; font-weight: bold;">
                 </div>
                 
                 <div class="form-group" style="padding-left: 100px;">
