--- a/api-runtime/rest-runtime/admin-web/html/s3.html
+++ b/api-runtime/rest-runtime/admin-web/html/s3.html
@@ -326,7 +326,7 @@
             <form id="bucket-create-form" onsubmit="event.preventDefault(); createBucket();">
                 <div>
                     <label>Bucket Name:</label>
-                    <input type="text" id="new-bucket-name" required>
+                    <input type="text" id="new-bucket-name" required style="color: #3366CC; font-weight: bold;">
                 </div>
                 <div style="margin-top:20px; text-align:center;">
                     <button type="submit">Create</button>
