--- a/api-runtime/rest-runtime/admin-web/html/cluster.html
+++ b/api-runtime/rest-runtime/admin-web/html/cluster.html
@@ -120,6 +120,7 @@
             padding: 15px;
             margin-bottom: 20px;
             border-radius: 5px;
+            background-color: #f9f9f9;
         }
 
         .info-group legend {
@@ -761,7 +762,7 @@
                     <!-- Cluster Name -->
                     <div class="form-group">
                         <label for="clusterName">Cluster Name:</label>
-                        <input type="text" id="clusterName" name="clusterName" required>
+                        <input type="text" id="clusterName" name="clusterName" required style="color: #3366CC; font-weight: bold;">
                     </div>
     
                     <!-- Cluster Version -->
@@ -797,7 +798,7 @@
 
                     <div class="form-group">
                         <label for="nodeGroupName">NodeGroup Name:</label>
-                        <input type="text" id="nodeGroupName" name="nodeGroupName" required>
+                        <input type="text" id="nodeGroupName" name="nodeGroupName" required style="color: #3366CC; font-weight: bold;">
                     </div>
 
                     <div class="form-group">
