--- a/api-runtime/rest-runtime/admin-web/html/vpc-subnet.html
+++ b/api-runtime/rest-runtime/admin-web/html/vpc-subnet.html
@@ -698,7 +698,7 @@
     
     <div class="content">
         <div class="header-with-progress">
-            <button class="add-button" onclick="showOverlay()">+</button>
+            <button class="add-button" onclick="showOverlay()">+ VPC</button>
             <div id="mockButtonsContainer" style="display: flex; align-items: center;"></div>
             <div class="progress-bar-container" id="progressBarContainer">
                 <div class="progress-bar" id="progressBar"></div>
