--- a/api-runtime/rest-runtime/admin-web/html/keypair.html
+++ b/api-runtime/rest-runtime/admin-web/html/keypair.html
@@ -428,7 +428,7 @@
 
     <div class="content">
         <div class="header-with-progress">
-            <button class="add-button" onclick="showOverlay()">+</button>
+            <button class="add-button" onclick="showOverlay()">+ KeyPair</button>
             <div id="mockButtonsContainer" style="display: flex; align-items: center;"></div>
             <div class="progress-bar-container" id="progressBarContainer">
                 <div class="progress-bar" id="progressBar"></div>
